[bug bash] | Gaurav/Ankur | fixed scrollbar for tags input

--- a/src/CreateQuestionPaper/create_question_paper.css
+++ b/src/CreateQuestionPaper/create_question_paper.css
@@ -364,3 +364,6 @@ code, pre{
     max-height: 220% !important;
     z-index: 2;
 }
+.tagcontainer{
+    width: 25% !important;
+}
